--- a/styleContacto.css
+++ b/styleContacto.css
@@ -46,3 +46,89 @@ body {
     border-bottom:2px solid #EEFB03;
 }
 
+
+.title{
+    color: #FF3131;
+    font-weight: 800;
+    font-size: 50.9px;
+}
+
+.textbold{
+    font-weight: 600;
+}
+.txt__info{
+    color: #EEFB03;
+    text-decoration:underline solid #EEFB03;
+}
+
+textarea{
+    color: #000000;
+    padding: 10px 5px 10px 10px;
+    border-radius: 9px;
+    width: 100%;
+    height: 53px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    resize: none;
+    margin-bottom: 20px;
+}
+
+.form__message{
+    height: 100px;
+}
+
+.top p{
+    font-size: 20px;
+    text-align: center;
+}
+
+.top h1{
+    font-size: 58px;
+}
+
+.top{
+    padding: 5px 100px 30px 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content{
+    display: flex;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    padding: 5px 0px 5px 100px;
+    font-size: 20px;
+}
+
+.info .textbold, .info .txt__info {
+    margin-bottom: 30px;
+}
+
+form{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    padding: 5px 100px 0 5px;
+}
+
+.btn{
+    background-color: #EEFB03;
+    color: #000000;
+    font-size: 14px;
+    font-weight: 600;
+    padding: 15px 45px 15px 45px;
+    border: transparent;
+    border-radius: 40px;
+    margin: 0 0 0 auto;
+    letter-spacing: 2px;
+    width: fit-content;
+}
+
